--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 .app-wrapper {
+  display: grid;
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
   width: 1200px;
   margin: 0 auto;
   margin-top: 70px;
-  
+  grid-template-areas:
+    'h h'
+    'n c';
+}
+
+.app-wrapper-content {
+
+  grid-area: c;
+  background-color: rgb(230, 225, 225);
+  margin-top: 4px;
 }
