--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 .header {
     grid-area: h;
-    background-color: rgb(0, 140, 255);
+    background-color: rgb(56, 65, 71);
 }
 
 .header img {
-    height: 40px;
+    height: 100%;
+    width: 100px;
 }
