--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,8 @@
 .nav {
     grid-area: n;
-    background-color: rgb(0, 140, 255);
-    margin-top: 4px;
+  background-color: rgb(226, 226, 226);
+    margin-left: 100px;
+    margin-top: 10px;
     margin-right: 4px;
 }
 
@@ -15,7 +16,7 @@
 }
 
 .item a {
-    color: #fff;
+    color: #222222;
     text-decoration: none;
 }
 
