--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -5,4 +5,10 @@
 .selectedPage {
     font-weight: bold;
     cursor: pointer;
+    
+}
+.pageUsers span {
+    margin-right: 10px;
+    cursor: pointer;
+    font-size: 20px;
 }
