--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,19 @@
 .header {
     grid-area: h;
     background-color: rgb(0, 139, 231);
-    width: 100vw;
+    width: 99vw;
 }
 
 .header img {
     height: 100%;
     width: 70px;
     margin-left: 110px;
+}
+
+.loginBlock {
+    float: right;
+}
+
+.loginBlock a {
+    color: white;
 }
