--- a/src/components/common/Preloader/Paginator/Paginator.module.css
+++ b/src/components/common/Preloader/Paginator/Paginator.module.css
@@ -1,10 +1,12 @@
-.selectedPage {
-    font-weight: bold;
-    cursor: pointer;
-    
+.paginator {
+    margin: 10px;
 }
-.pageUsers span {
-    margin-right: 10px;
-    cursor: pointer;
-    font-size: 20px;
+.pageNumber {
+    padding: 2px;
+    border: 1px solid grey;
+}
+
+.pageNumber.selectedPage {
+    font-weight: bold;
+    border-color: black;
 }
