--- a/src/components/Profile/MyPost/MyPost.module.css
+++ b/src/components/Profile/MyPost/MyPost.module.css
@@ -7,19 +7,16 @@
 }
 
 .button {
-    border: none;
-    background: #3a7999;
-    color: #f2f2f2;
-    padding: 10px;
-    font-size: 18px;
-    border-radius: 5px;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 500ms ease; 
-  }
-  
-  .button:hover {
-    background: rgba(0,0,0,0);
-    color: #3a7999;
-    box-shadow: inset 0 0 0 3px #3a7999;
-  }
+  border-radius: 10px;
+  color: white;
+  transition: .2s linear;
+  background: #0B63F6;
+  margin-right: 210px;
+  margin-top: 13px;
+  width: 130px;
+  height: 35px;
+}
+
+.button:hover {
+  box-shadow: 0 0 0 2px white, 0 0 0 4px #3C82F8;
+}
