--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,35 +1,69 @@
 .avatar img {
-    width: 250px;
-    height: 250px;
-    padding: 10px;
-}
-
-.avatar {
-    grid-area: avatar;
-}
-
-.userData {
-    grid-area: userData;
-    font-family: sans-serif;
-    font-size: 20px;
-    margin-top: 10px;
+    width: 300px;
+    height: 300px;
+    padding: 5px;
 }
 
 .profileInfo {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-areas:
-        'avatar userData';
+    display: flex;
 }
+
+.avatar {
+    width: 320px;
+}
+
+.userData {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+
+}
+
+.editName {
+    display: flex;
+}
+
 .formControl.error input,
 .formControl.error textarea {
     border: 1px solid red;
 }
+
 .formControl.error span {
     color: red;
 }
+
 .formSummaryError {
     border: 1px solid red;
     padding: 5px;
     color: red;
+}
+
+.button {
+    border-radius: 10px;
+    color: rgb(158, 158, 158);
+    transition: .2s linear;
+    background: white;
+    margin-left: 5px;
+    margin-top: 10px;
+    width: 45px;
+    height: 25px;
+    border: white;
+    cursor: pointer;
+}
+
+.button span {
+    font-size: 17px;
+}
+
+.button:hover {
+    color: black;
+}
+
+.edit div {
+    margin-bottom: 15px;
+}
+
+.contacts {
+    margin-left: 30px;
+    margin-top: 20px;
 }
